# plug-audit

./: .editorconfig  .gitignore  .semantic-release.yaml  CHANGELOG.md  Cargo.toml  README.md  action.yml  dist-workspace.toml  release-plz.toml
.config/: nextest.toml
.github/workflows/: badge.yml  ci.yml  dist.yml  release-plz.yml  release.yml
benches/: check.rs
docs/rules/: deps-optional-peer.md  nvim-augroup-clear.md  nvim-health-check.md  nvim-plug-mapping.md  nvim-setup-optional.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/parser/: lua.rs  mod.rs
src/adapters/repo/: discovery.rs  mod.rs
src/adapters/repo/snapshots/: plug_audit__adapters__repo__discovery__tests__sample_repo_discovery.snap
src/adapters/rules/: mod.rs
src/adapters/rules/nvim/: augroup_clear.rs  health_check.rs  mod.rs  plug_mapping.rs  setup_optional.rs
src/cli/: check.rs  mod.rs  report.rs  report_json.rs
src/cli/snapshots/: plug_audit__cli__report__tests__console_report_shape.snap  plug_audit__cli__report_json__tests__json_report_shape.snap
src/domain/: categories.rs  config.rs  finding.rs  mod.rs  rule.rs  rule_engine.rs  severity.rs  suppressions.rs
src/domain/snapshots/: plug_audit__domain__finding__tests__finding_display_consider_no_fix.snap  plug_audit__domain__finding__tests__finding_display_should_fix.snap  plug_audit__domain__finding__tests__finding_json_consider_no_fix.snap  plug_audit__domain__finding__tests__finding_json_must_fix.snap
src/ports/: mod.rs
tests/: cli.rs
tests/fixtures/rules/deps-optional-peer/: negative.lua  positive.lua
(+14 files in other folders)
